--- a/index.html
+++ b/index.html
@@ -1,3 +1,223 @@
+<!DOCTYPE html>
+<html>
+<head>
+<link rel="stylesheet" href="css/style.css" type="text/css" >
+<meta charset="utf-8" />
 <title> Happy Birthday Daisy </title>
+<style>
+*{padding:0;margin:0;}
+ul,li{list-style:none;}
+html,body,ul,li{height:100%;width:100%;}
+html,body{overflow:hidden;}
+body{font:30px/30px Tahoma,Arial;color:#333;position:relative;}
+ul{position:absolute;}
+li{float:right;}
+</style>
+</head>
+<body>
+<ul id="main">
+<li style="background:#FFADAD">
+<br>
+<h1 align="center">Happy Birthday</h1>
 
-<h1> Happy Birthday </h1>
+<div id="img_daisy">
+    <img src="img/innocentdaisy.gif"  alt="I am daisy, today is my birthday" />
+</div>
+
+<div id="daisy_say"> 
+
+    <br>
+    <br>
+- I am daisy, I am a beautiful <strike>duck</strike> girl. <br>
+
+<br>
+- But wait, where is Donald? <br>
+
+<br>
+- Maybe he is in next page. press <b>keydown</b> to switch.</div>
+
+<br>
+</li>
+
+<li style="background:#EAFFB9">
+<div id="donald_say"> 
+    <br>
+    <br>
+
+- I am Donald, I am a handsome <strike>duck</strike> guy. <br>
+
+<br>
+- And I am the supervise of Daisy in Amazon <br>
+
+<br>
+- Sometimes I am a Cruel Taskmaster, I often say "Back to work, boom." and Daisy will get +2 Attack.</div>
+
+
+<br>
+<div id="img_donald"><img src="img/donald.gif"  alt="I am donald, today is my girlfriend birthday." /></div>
+</li>
+<li style="background:#A0BEE2">
+
+<br>
+<h1 align="center">生日快乐</h1>
+<div id="cake"><img src="img/cake.gif"  alt="I am daisy, today is my birthday" /></div>
+<div id="happy_birthday">
+    前面两张图 纯属扯淡。。。
+
+    <br>
+    <br>
+
+    把个性域名作为生日礼物
+    
+    <br>
+    <br>
+    是不是特别 <strike>Geek</strike> 有创意！！
+<div>
+
+</li>
+<li style="background:#BFE5FF">
+<div id="four">
+
+最近你不是在学做网页么。所以我觉得 你应该有一个自己的独立域名了 嗯~
+    <br>
+    <br>
+
+这个网站 域名服务用的godaddy, 后台托管在github上。
+    <br>
+    <br>
+
+其实本来想用PERL写的。不过后来感觉没有必要 而且github不支持CGI. 还要单独买个后台服务器。所以就用最简单的HTML+CSS+JAVASCRIPT啦
+
+    <br>
+    <br>
+<strike>特别金牛座，财迷不舍得买后台服务器</strike>
+    <br>
+</li>
+<li style="background:#90FFE0">
+<br>
+<h1 align="center"> 帐号密码 </h1>
+
+<div id="pwd">
+Domain Service: godaddy
+    <br>
+    <br>
+Username: daisyyu1990
+    <br>
+    <br>
+password: 0MG****uys(中间隐藏4位 你知道是什么的)
+    <br>
+    <br>
+backend: github pages  //www.github.com
+    <br>
+    <br>
+Username: tk.seanzhang@gmail.com
+    <br>
+    <br>
+password: 0MG****uys
+</div>
+
+</li>
+<li style="background:#DB9BFF">
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+<h1 align="center"> End. </h1>
+</li>
+</ul>
+<script>
+function $(id){return document.getElementById(id)}
+function $c(p,i){return p.getElementsByTagName(i)}
+var Command=function(){
+ var //定义
+ state={},//按键序列
+ interval=interval,//计时器
+ work=li_num=top_hei=0,//工作中,当前页面,偏移值
+ Command={
+  //我是Command部分的入口
+  init:function(){
+   //下面两行分别绑定了键盘的按下和抬起
+   window.addEventListener('keydown', handle, false);
+   window.addEventListener('keyup', handle, false);
+  },
+  state:state,
+  bind:true
+ };
+ //我是键盘事件绑定的函数
+ function handle(e){
+  //定义了几个变量 code是按下的按键编号可以到<a href="http://txts.sinaapp.com/292.txt" target="_blank">http://txts.sinaapp.com/292.txt</a>查阅 ,max_h是最高偏移值
+  var code=e.keyCode,max_h=$('main').clientHeight*5-100;
+  //根据按键事件类型判断
+  switch(e.type){
+   //如果是按下
+   case 'keydown':
+    //如果当前按键已经按下 或者 滚动在工作中 那么取消操作
+    if(state[code]>0||work){
+     return;
+    //如果按键编号等于40 
+    }else if(code==40){
+     //如果当前偏移值大于最高偏移值那么取消操作
+     if(top_hei>max_h)return;
+     //当前页面编号+1
+     li_num++;
+     //定义top_h 等于需要调整到的偏移值
+     var top_h=$c($('main'),'li')[0].clientHeight*li_num;
+     //传递到s_c函数
+     s_c('main',Math.round(top_h));
+    //如果按键编号等于38 
+    }else if(code==38){
+     //如果当前偏移值小于最小偏移值那么取消操作
+     if(top_hei<50)return;
+     //当前页面编号-1
+     li_num--;
+     //定义top_h 等于需要调整到的偏移值
+     var top_h=$c($('main'),'li')[0].clientHeight*li_num;
+     //传递到s_c函数
+     s_c('main',Math.round(top_h));
+    }
+    //记录当前按键
+    state[code] = 1;
+   break;
+   //如果是抬起
+   case 'keyup':
+    //取消记录当前按键
+    state[code] = 0;
+   break;
+  }
+ }
+ //循环函数
+ function s_c(i,t){
+  //工作中
+  work=1;
+  //定义 o等于需要更改的id t等于需要调整到的偏移值
+  var o=$(i),r=top_hei<t;
+  //如果当前偏移值小于新的偏移值那么+30 否则-30
+  top_hei<t?top_hei+=50:top_hei-=50;
+  //将偏移值应用到界面上
+  o.style.top=-top_hei+'px';
+  //如果还没到应该偏移的地方
+  if(Math.abs(top_hei-t)>50){
+   //那么再运行自身
+   interval=setTimeout(function(){s_c(i,t)},3);
+  //如果到了应该偏移的地方
+  }else{
+   //精确定位到新偏移值
+   o.style.top=-t+'px';
+   //精确定位到新偏移值
+   top_hei=t;
+   //取消工作中状态
+   work=0;
+  }
+ }
+ return Command;
+}();
+Command.init();
+</script>
+</body>
+</html>
